Hot fix dark mode and burger menu (#42)
* Merged the most actual branches together + code refactoring + loader fix + search fix

* style fix

* hot fix for Netlify

* Rename SearchHelper.ts to searchHelper.ts

* price fix

* Update SearchBar.tsx

* dark theme implementation

* dark theme implemented

* hot-fix-theme-change

* firebase-test-implemented

* hot-fixes Burger and dark mode fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,6 @@ body {
 body {
   font-family: fonts.$main-font, sans-serif;
   line-height: variables.$line-height-text;
-  
 }
 
 ul,
@@ -50,12 +49,6 @@ button {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-}
-
-.theme-wrapper {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
 }
 
 .wrapper {
